Added an endpoint for changing the review
